                             mix --redirect -l foo,bar < file
                             redirect the message so the chain is actually
                             foo,bar,hop1,... and places it in your pool.
                             If the total number of hops (which cannot be
                             known) exceeds 20 the message is damanged
                             and will fail at the 20th node.


2003-06-27      3.0a6     Don't send messages to ourselves via the mailsystem
                            but instead place them in the pool as incoming
                            messages so that they will get processed with the
                            next pool run.
                          Hopefully fix a bug with pool stats.

2003-06-29      3.0a7     Two minor fixes for bugs introduced in 3.0a6 and
                            3.0a4.

2003-06-30      3.0a8     Minor stats fix.  The date in remailer-stats was
                            sometimes wrong.

2003-10-12      3.0a9     Don't try to send a message if there are no
                            recipients left.
                          Set default max-randhops from 20 to 4.
                          Remix-To chain is limited by max-randhops limit as
                            well.
                          Messages to more than one remailer are dropped.
                          Config option EXTFLAGS allows appending additional
                            flags to the capabilities string.  (Hauke Lampe)
                          Config option PRECEDENCE allows setting the
                            Precedence: header on all outgoing mail.
                            (Hauke Lampe)
                          Nym support is not compiled in by default anymore.
                          Ignore 'No reliable remailers' problems when
                            randhopping messages in middleman mode.
                            That is better than dropping them.